--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-06-13  Michael S. Kelley <msk@astro.umd.edu>
+
+	* Added integratelist.
+
+	* Development branch 0.9.1-integratelist.
+
 2011-01-21  Michael S. Kelley <msk@astro.umd.edu>
 
 	* Version 0.9.1 released.
