--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,8 @@
-2011-06-13  Michael S. Kelley <msk@astro.umd.edu>
+2011-06-14  Michael S. Kelley <msk@astro.umd.edu>
 
 	* Added integratelist.
 
-	* Development branch 0.9.1-integratelist.
+	* Version 0.9.2 released.
 
 2011-01-21  Michael S. Kelley <msk@astro.umd.edu>
 
