--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,13 @@
 
 Newsworthy notes for users of CometSuite.
-Copyright (C) 2010 Michael S. Kelley
+Copyright (C) 2010,2011 Michael S. Kelley
+
+0.9.2 (14 Jun 2011)
+
+* integratelist, a program to integrate an xyzfile from the initial
+  state (as opposed to integratexyz which integrates from the final
+  state).  With integratelist, we can create xyzfiles that are just
+  lists of grains to be integrated forward in time.
 
 0.9.1 (21 Jan 2011)
 
