--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-01-17  Michael S. Kelley <msk@astro.umd.edu>
+
+	* Development version: 0.9.3-dev
+
+	* integratelist.cc updated to accept --planetlookup and --planets.
+
 2011-06-14  Michael S. Kelley <msk@astro.umd.edu>
 
 	* integratelist.cc added.
