--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,11 @@
 
 Newsworthy notes for users of CometSuite.
-Copyright (C) 2010,2011 Michael S. Kelley
+Copyright (C) 2010,2011,2012 Michael S. Kelley
+
+XXXX (YYYY)
+
+* integratelist now accepts --planetlookup and --planets as
+  command-line inputs.
 
 0.9.2 (14 Jun 2011)
 
