--- a/NEWS
+++ b/NEWS
@@ -4,8 +4,14 @@ Copyright (C) 2010,2011,2012 Michael S. Kelley
 
 XXXX (YYYY)
 
+* xyz2fits now has a preliminary implementation of nucleus rotation.
+  However, the routines need testing.
+
 * integratelist now accepts --planetlookup and --planets as
   command-line inputs.
+
+* RADIUS, LOGRADIUS, and AGE now optinally accept a single value to
+  use for all grains, e.g., "RADIUS 10.0".
 
 0.9.2 (14 Jun 2011)
 
