syn2ds9 and --ecliptic

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-20  Michael S. Kelley <msk@astro.umd.edu>
+
+	* syn2ds9.cc Added --ecliptic.
+
 2012-06-16  Michael S. Kelley <msk@astro.umd.edu>
 
 	* pfunctions.cc radius, logradius, and age pfunctions now allow a
