--- a/NEWS
+++ b/NEWS
@@ -2,10 +2,11 @@
 Newsworthy notes for users of CometSuite.
 Copyright (C) 2010,2011,2012 Michael S. Kelley
 
-XXXX (YYYY)
+0.9.3 (20 Jun 2012)
 
 * xyz2fits now has a preliminary implementation of nucleus rotation.
-  However, the routines need testing.
+  It isn't exactly what I was going for, but it is working and seems
+  OK for release.
 
 * integratelist now accepts --planetlookup and --planets as
   command-line inputs.
@@ -13,7 +14,7 @@ XXXX (YYYY)
 * RADIUS, LOGRADIUS, and AGE now optinally accept a single value to
   use for all grains, e.g., "RADIUS 10.0".
 
-* syn2dy9 can output in ecliptic coordinates.
+* syn2ds9 can output in ecliptic coordinates.
 
 0.9.2 (14 Jun 2011)
 
