--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2012-07-31  Michael S. Kelley <msk@astro.umd.edu>
+
+	* vejtest.cc Renamed from jettest.cc.  Added an actual jet test.
+
+	* src/Makefile.am Renamed jettest to vejtest.
+
+	* xyz2fits.cc Logically arranged --help output.
+
 2012-06-29  Michael S. Kelley <msk@astro.umd.edu>
 
 	* rundynamics.cc Revamped help and option handling.
