--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,13 @@
 
 	* xyz2fits.cc Logically arranged --help output.
 
+	* xyzProject.cc, xyzProject.h Updated jet handling: jets are
+	specified via planetocentric coordinates (lon, lat), rather than a
+	fixed point on the sky.  Added rotFreq() methods.
+
+	* Vector.cc, Vector.h (angles) Created to return azimuth and
+	altitude (lambda, beta / longitude, latitude) angles.
+
 2012-06-29  Michael S. Kelley <msk@astro.umd.edu>
 
 	* rundynamics.cc Revamped help and option handling.
