--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-07-09  Michael S. Kelley <msk@astro.umd.edu>
+
+	* Version 0.9.5 released.
+
 2012-12-03  Michael S. Kelley <msk@astro.umd.edu>
 
 	* Physical.h, Physical.cc (composition) Allow compositions to be
